@@ -18,9 +18,9 @@
 // 02111-1307, USA.
 // ========================================================================
 //
-// File          : $RCSfile$
-// Revision      : $Revision$
-// Revision date : $Date$
+// File          : $RCSfile: ui-authentication.cc,v $
+// Revision      : $Revision: 1.2 $
+// Revision date : $Date: 2004/12/03 17:13:39 $
 // Author(s)     : Nicolas Rougier
 // Short         : 
 //
@@ -68,7 +68,7 @@ void
 Authentication::show (std::string name)
 {
 	if (!xml_)
-		create();
+		create(this);
 
 	// Try to identify mailbox by:
 	// 1. using name
